--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link th:href="@{/css/styles.css}" rel="stylesheet" />
     <script type="text/javascript" th:src="@{/js/scripts.js}"></script>
-
     <title>Text Stats App</title>
 </head>
 
@@ -46,8 +45,6 @@
                 </td>
             </tr>
         </table>
-    </div><br><br><br>
-
+    </div>
 </body>
-
 </html>
